User Authenticating complete, may need to add specific details later.

--- a/templates/moneyfishapp/index.html
+++ b/templates/moneyfishapp/index.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
+{% extends 'moneyfishapp/base.html' %}
 {% load staticfiles %}
-<html>
-    <head> 
-        <title>MoneyFish</title>
-    </head>
 
-    <body>
-        <h1>This is the homepage</h1> 
-        <div>
-            hey <br />
-            <strong>{{ boldmessage }}</strong><br /> </div>
-        </div>
-        <div>
-            <a href="/moneyfishapp/login/">Login</a><br />
-            <a href="/moneyfishapp/debts/">Debts</a><br />
-            <a href="/moneyfishapp/money/">MyMoney</a><br />
-        </div> 
-    </body>
-</html>
+
+{% block title_block %}
+    Homepage
+{% endblock %}
+
+
+{% block body_block %}
+    <h1>MoneyFish</h1>
+
+    {% if user.is_authenticated %}
+        Welcome {{ user.username }}
+    {% else %}
+        Welcome
+    {% endif %}
+
+{% endblock %}
