--- a/templates/moneyfishapp/register.html
+++ b/templates/moneyfishapp/register.html
@@ -9,7 +9,8 @@
 <h1>Register for MoneyFish!</h1>
 {% if registered %}
 <strong>Thank You for Registering!</strong>
-<a href="/moneyfishapp/index.html">Return to the MoneyFish homepage.</a><br />
+<br />
+<a href="/moneyfishapp/">Return to the MoneyFish homepage.</a><br />
 {% else %}
 <strong>Register here!</strong><br />
 <form id="user_form" method="post" action="/moneyfishapp/register/" enctype="multipart/form-data">
