can now add income and outgoing

--- a/templates/moneyfishapp/debts.html
+++ b/templates/moneyfishapp/debts.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>MoneyFish</h1>
+    <h1>MoneyFish - Debts</h1>
 
     {% if user.is_authenticated %}
-        {{ user.username }} : debts
+        {{ user.username }} : Debts
     {% endif %}
 
     <div>
