--- a/templates/moneyfishapp/loans.html
+++ b/templates/moneyfishapp/loans.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>MoneyFish</h1>
+    <h1>MoneyFish - Loans</h1>
 
     {% if user.is_authenticated %}
         {{ user.username }} : Loans
