--- a/templates/moneyfishapp/base.html
+++ b/templates/moneyfishapp/base.html
@@ -4,6 +4,8 @@
 <html>
     <head>
         <style>
+
+        
         ul {
             list-style-type: none;
             margin: 0;
@@ -19,13 +21,18 @@
         li a {
             display: block;
             color: black;
-            padding: 14px 16px;
+            padding: 4px 4px;
             text-decoration: none;
         }
 
         li a:hover {
             background-color: #add8e6;
         }
+
+        body {
+             background-image: url("/static/images/MFI2.png");
+             background-repeat: repeat;
+             }
         </style>
             <title>
                 {% block title_block %}
@@ -33,8 +40,10 @@
                 {%endblock %}
             </title>
     </head>
-    <boody>
+    <body>
         <header>
+            {% block header_block %}
+            {% endblock %}
             <nav>
                 <div>
                     <ul>
@@ -58,5 +67,5 @@
 
             {% endblock %}
         </div>
-    </boody>
+    </body>
 </html>
