--- a/templates/moneyfishapp/index.html
+++ b/templates/moneyfishapp/index.html
@@ -8,12 +8,29 @@
 
 
 {% block body_block %}
-    <h1>MoneyFish</h1>
+
 
     {% if user.is_authenticated %}
-        Welcome {{ user.username }}
+        Welcome {{ user.username }} to, 
     {% else %}
-        Welcome
+        Welcome to
     {% endif %}
+
+    <style>
+        .center {
+            margin-top: 180px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%
+
+        
+      }
+    </style>
+    
+
+    <div>
+        <img src="{% static 'images/MFLogoBig.png' %} " alt="MoneyFish logo"  class="center" />
+    </div>
 
 {% endblock %}
