--- a/templates/moneyfishapp/register.html
+++ b/templates/moneyfishapp/register.html
@@ -5,10 +5,27 @@
     Register
 {% endblock %}
 
+{% block header_block %}
+<div>
+    <img src="{% static 'images/MFLogoReg.png' %} " alt="MoneyFish logo" class="img-place" />
+</div>
+
+
+<style>
+    .img-place {
+        margin-top: 8px; 
+        margin-bottom: 8px;
+  }
+</style>
+
+{% endblock %}
+
 {% block body_block %}
-<h1>Register for MoneyFish!</h1>
+
+<div>
 {% if registered %}
 <strong>Thank You for Registering!</strong>
+<br />
 <a href="/moneyfishapp/">Return to the MoneyFish homepage.</a><br />
 {% else %}
 <strong>Register here!</strong><br />
@@ -21,4 +38,5 @@
     <input type="submit" name="submit" value="Register" />
 </form>
 {% endif %}
+</div>
 {% endblock %}
