--- a/templates/moneyfishapp/add_outgoing.html
+++ b/templates/moneyfishapp/add_outgoing.html
@@ -5,8 +5,22 @@
     Add Outgoing
 {% endblock %}
 
+{% block header_block %}
+<div>
+    <img src="{% static 'images/MFLogoAddOutgoing.png' %} " alt="MoneyFish logo" class="img-place" />
+</div>
+
+
+<style>
+    .img-place {
+        margin-top: 8px; 
+        margin-bottom: 8px;
+  }
+</style>
+{% endblock %}
+
 {% block body_block %}
-<h1>Add Outgoing</h1>
+<h1>Please add your outgoing amount here!</h1>
 <div>
     <form id="outgoing_form" method="post" action="/moneyfishapp/add_outgoing/">
         {% csrf_token %}
