--- a/templates/moneyfishapp/index.html
+++ b/templates/moneyfishapp/index.html
@@ -1,19 +1,36 @@
-<!DOCTYPE html>
 {% extends 'moneyfishapp/base.html' %}
-{% load static %}
+{% load staticfiles %}
+
 
 {% block title_block %}
-	Homepage
+    Homepage
 {% endblock %}
 
+
 {% block body_block %}
-	 <h1>MoneyFish</h1>
-		{% if user.is_authenticated %}
-			Welcome {{ user.username }}!
-		{% else %}
-			Welcome
-		{% endif %}
-		
-		
-		
+
+
+    {% if user.is_authenticated %}
+        Welcome {{ user.username }} to, 
+    {% else %}
+        Welcome to
+    {% endif %}
+
+    <style>
+        .center {
+            margin-top: 180px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%
+
+        
+      }
+    </style>
+    
+
+    <div>
+        <img src="{% static 'images/MFLogoBig.png' %} " alt="MoneyFish logo"  class="center" />
+    </div>
+
 {% endblock %}
