--- a/templates/moneyfishapp/login.html
+++ b/templates/moneyfishapp/login.html
@@ -1,15 +1,32 @@
 {% extends 'moneyfishapp/base.html' %}
-{% load static%}
+{% load staticfiles %}
+
 {% block title_block %}
-	Login
+    Login
 {% endblock %}
+
+{% block header_block %}
+<div>
+    <img src="{% static 'images/MFLogoLogin.png' %} " alt="MoneyFish logo" class="img-place" />
+</div>
+
+
+<style>
+    .img-place {
+        margin-top: 8px; 
+        margin-bottom: 8px;
+  }
+</style>
+
+{% endblock %}
+
 {% block body_block %}
-<h1>Login</h1>
-	{% csrf_token %}
-	Username: <input type="text" name="username" value="" size="50" />
-	<br />
-	Password: <input type="password" name="password" value="" size="50" />
-	<br />
-	<input type="submit" value="submit" />
+<form id="login_form" method="post" action="/moneyfishapp/login/">
+    {% csrf_token %}
+    Username: <input type="text" name="username" value="" size="50" />
+    <br />
+    Password: <input type="password" name="password" value="" size="50" />
+    <br />
+    <input type="submit" value="submit" />
 </form>
 {% endblock %}
