--- a/templates/moneyfishapp/debts.html
+++ b/templates/moneyfishapp/debts.html
@@ -20,18 +20,29 @@
 {% endblock %}
 
 {% block body_block %}
+
+    <script>
+        var y = 0
+    </script>
+
     <br />
 
     {% if user.is_authenticated %}
         {{ user.username }} : Debts
     {% endif %}
 
+    <p id="debts"></p>
+
     <div>
     {% if debts %}
-        <br />
         <ul>
         {% for debt in debts %}
             <li>{{ debt.lender }} : {{ debt.dvalue }}</li>
+            <script>
+                var y = y + {{ debt.dvalue }}
+                var total = y
+                document.getElementById("debts").innerHTML="Your total debt is: £" + total;
+            </script>
             <br />
         {% endfor %}
         </ul>
