--- a/templates/moneyfishapp/myMoney.html
+++ b/templates/moneyfishapp/myMoney.html
@@ -17,19 +17,21 @@
         margin-bottom: 8px;
   }
 </style>
-
 {% endblock %}
 
 {% block body_block %}
-
 <br />
-
-
 
     {% if user.is_authenticated %}
         {{ user.username }} : Total Money
     {% endif %}
     <br />
+    <script>
+        var x = 0
+        var y = 0
+    </script>
+
+    <p id="income"></p>
 
     <div>
         Money In:
@@ -38,6 +40,9 @@
             <ul>
             {% for in in income %}
                 <li>{{ in.insource}} : {{ in.invalue }}</li>
+                <script>
+                    var x = x + {{ in.invalue }}
+                </script>
                 <br />
             {% endfor %}
             </ul>
@@ -48,12 +53,19 @@
     <br />
     <a href="/moneyfishapp/add_income/">Add a New Income</a><br />
     <div>
+    <p id="out"></p>
         Money Out:
         <br />
         {% if outgoing %}
             <ul>
             {% for out in outgoing %}
                 <li>{{ out.outsource }} : {{ out.outvalue }}</li>
+                <script>
+                    var y = y + {{ out.outvalue }}
+                    var total = x-y
+
+                    document.getElementById("income").innerHTML = "Your Total Money is: £" + total;
+                </script>
                 <br />
             {% endfor %}
             </ul>
