--- a/templates/moneyfishapp/register.html
+++ b/templates/moneyfishapp/register.html
@@ -17,11 +17,10 @@
         margin-bottom: 8px;
   }
 </style>
-
 {% endblock %}
 
 {% block body_block %}
-
+<h1>Register for MoneyFish!</h1>
 <div>
 {% if registered %}
 <strong>Thank You for Registering!</strong>
