--- a/templates/moneyfishapp/add_loan.html
+++ b/templates/moneyfishapp/add_loan.html
@@ -17,11 +17,10 @@
         margin-bottom: 8px;
   }
 </style>
-
 {% endblock %}
 
 {% block body_block %}
-
+<h1>Please add your new loan here!</h1>
 <div>
     <form id="loan_form" method="post" action="/moneyfishapp/add_loan/">
         {% csrf_token %}
