--- a/templates/moneyfishapp/add_outgoing.html
+++ b/templates/moneyfishapp/add_outgoing.html
@@ -17,11 +17,10 @@
         margin-bottom: 8px;
   }
 </style>
-
 {% endblock %}
 
 {% block body_block %}
-
+<h1>Please add your outgoing amount here!</h1>
 <div>
     <form id="outgoing_form" method="post" action="/moneyfishapp/add_outgoing/">
         {% csrf_token %}
