--- a/templates/moneyfishapp/base.html
+++ b/templates/moneyfishapp/base.html
@@ -4,8 +4,6 @@
 <html>
     <head>
         <style>
-
-        
         ul {
             list-style-type: none;
             margin: 0;
@@ -21,7 +19,7 @@
         li a {
             display: block;
             color: black;
-            padding: 4px 4px;
+            padding: 14px 16px;
             text-decoration: none;
         }
 
@@ -40,22 +38,23 @@
                 {%endblock %}
             </title>
     </head>
-    <body>
+    <boody>
         <header>
             {% block header_block %}
+
             {% endblock %}
             <nav>
                 <div>
                     <ul>
-                        <li><a href="/moneyfishapp/">Homepage</a></li>
+                        <li><a href="{% url 'moneyfishapp:index' %}">Homepage</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="/moneyfishapp/money">MyMoney</a></li>
-                        <li><a href="/moneyfishapp/debts">Debts</a></li>
-                        <li><a href="/moneyfishapp/loans">Loans</a></li>
-                        <li><a href="/moneyfishapp/logout">Logout</a></li>
+                        <li><a href="{% url 'moneyfishapp:money' %}">MyMoney</a></li>
+                        <li><a href="{% url 'moneyfishapp:debts' %}">Debts</a></li>
+                        <li><a href="{% url 'moneyfishapp:loans' %}">Loans</a></li>
+                        <li><a href="{% url 'moneyfishapp:logout' %}">Logout</a></li>
                     {% else %}
-                        <li><a href="/moneyfishapp/register">Register</a></li>
-                        <li><a href="/moneyfishapp/login">Login</a></li>
+                        <li><a href="{% url 'moneyfishapp:register' %}">Register</a></li>
+                        <li><a href="{% url 'moneyfishapp:login' %}">Login</a></li>
                     {% endif %}
                     </ul>
                 </div>
@@ -67,5 +66,5 @@
 
             {% endblock %}
         </div>
-    </body>
+    </boody>
 </html>
