--- a/templates/moneyfishapp/debts.html
+++ b/templates/moneyfishapp/debts.html
@@ -17,21 +17,33 @@
         margin-bottom: 8px;
   }
 </style>
-
 {% endblock %}
 
 {% block body_block %}
 
+    <script>
+        var y = 0
+    </script>
+
+    <br />
 
     {% if user.is_authenticated %}
         {{ user.username }} : Debts
     {% endif %}
 
+    <p id="debts"></p>
+
     <div>
     {% if debts %}
         <ul>
         {% for debt in debts %}
-            <li>{{ debt.lender }} : {{ debt.dvalue }}</li>
+            <li>{{ debt.lender }} : {{ debt.dvalue }} </li>
+            
+            <script>
+                var y = y + {{ debt.dvalue }}
+                var total = y
+                document.getElementById("debts").innerHTML="Your total debt is: £" + total;
+            </script>
             <br />
         {% endfor %}
         </ul>
@@ -43,4 +55,9 @@
     <a href="/moneyfishapp/add_debt/">Add a New Debt</a><br />
 {% endblock %}
 
-
+<script>
+    function rmvfunc(debt) {
+         Debts.objects.filter(id=debt.id).delete();
+    
+    }
+    </script>
