--- a/templates/moneyfishapp/index.html
+++ b/templates/moneyfishapp/index.html
@@ -8,10 +8,9 @@
 
 
 {% block body_block %}
-
-
+<br />
     {% if user.is_authenticated %}
-        Welcome {{ user.username }} to, 
+        Welcome {{ user.first_name }} {{ user.last_name }} to, 
     {% else %}
         Welcome to
     {% endif %}
@@ -23,14 +22,12 @@
         margin-left: auto;
         margin-right: auto;
         width: 80%
+}
+</style>
 
-        
-      }
-    </style>
-    
 
-    <div>
-        <img src="{% static 'images/MFLogoBig.png' %} " alt="MoneyFish logo"  class="center" />
-    </div>
+<div>
+    <img src="{% static 'images/MFLogoBig.png' %} " alt="MoneyFish logo"  class="center" />
+</div>
 
 {% endblock %}
