--- a/templates/moneyfishapp/debts.html
+++ b/templates/moneyfishapp/debts.html
@@ -5,18 +5,44 @@
     Debts
 {% endblock %}
 
+
+{% block header_block %}
+<div>
+    <img src="{% static 'images/MFLogoDebts.png' %} " alt="MoneyFish logo" class="img-place" />
+</div>
+
+
+<style>
+    .img-place {
+        margin-top: 8px; 
+        margin-bottom: 8px;
+  }
+</style>
+
+{% endblock %}
+
 {% block body_block %}
-    <h1>MoneyFish - Debts</h1>
+
+<script>
+	var y = 0
+</script>
+
+
 
     {% if user.is_authenticated %}
         {{ user.username }} : Debts
     {% endif %}
-
+			<p id="debts"></p>
     <div>
     {% if debts %}
         <ul>
         {% for debt in debts %}
             <li>{{ debt.lender }} : {{ debt.dvalue }}</li>
+			<script>
+				var y = y + {{ debt.dvalue }}
+				var total = y
+				document.getElementById("debts").innerHTML ="Your total debt is: £" + total;
+			</script>
             <br />
         {% endfor %}
         </ul>
