--- a/templates/moneyfishapp/loans.html
+++ b/templates/moneyfishapp/loans.html
@@ -5,9 +5,29 @@
     Loans
 {% endblock %}
 
-{% block body_block %}
-    <h1>MoneyFish - Loans</h1>
+{% block header_block %}
+<div>
+    <img src="{% static 'images/MFLogoLoans.png' %} " alt="MoneyFish logo" class="img-place" />
+</div>
 
+<script>
+	var y = 0
+</script>
+
+
+
+<style>
+    .img-place {
+        margin-top: 8px; 
+        margin-bottom: 8px;
+  }
+</style>
+
+{% endblock %}
+
+{% block body_block %}
+    
+		<p id="loans"></p>
     {% if user.is_authenticated %}
         {{ user.username }} : Loans
     {% endif %}
@@ -17,6 +37,11 @@
         <ul>
         {% for loan in loans %}
             <li>{{ loan.borrower }} : {{ loan.lvalue }}</li>
+			<script>
+				var y = y + {{ loan.lvalue }}
+				var total = y
+				document.getElementById("loans").innerHTML ="Your total loaned money is: £" + total;
+			</script>
             <br />
         {% endfor %}
         </ul>
