--- a/templates/moneyfishapp/add_loan.html
+++ b/templates/moneyfishapp/add_loan.html
@@ -23,7 +23,7 @@
 {% block body_block %}
 
 <div>
-    <form id="loan_form" method="post" action="/moneyfishapp/add_loan/">
+    <form id="loan_form" method="post" action="{% url 'moneyfishapp:add_loan' user.username %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
