--- a/templates/moneyfishapp/add_outgoing.html
+++ b/templates/moneyfishapp/add_outgoing.html
@@ -23,7 +23,7 @@
 {% block body_block %}
 
 <div>
-    <form id="outgoing_form" method="post" action="/moneyfishapp/add_outgoing/">
+    <form id="outgoing_form" method="post" action="{% url 'moneyfishapp:add_outgoing' user.username %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
