--- a/templates/moneyfishapp/base.html
+++ b/templates/moneyfishapp/base.html
@@ -47,15 +47,15 @@
             <nav>
                 <div>
                     <ul>
-                        <li><a href="/moneyfishapp/">Homepage</a></li>
+                        <li><a href="{% url 'moneyfishapp:index'%}">Homepage</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="/moneyfishapp/money">MyMoney</a></li>
-                        <li><a href="/moneyfishapp/debts">Debts</a></li>
-                        <li><a href="/moneyfishapp/loans">Loans</a></li>
-                        <li><a href="/moneyfishapp/logout">Logout</a></li>
+                        <li><a href="{% url 'moneyfishapp:money'%}">MyMoney</a></li>
+                        <li><a href="{% url 'moneyfishapp:debts'%}">Debts</a></li>
+                        <li><a href="{% url 'moneyfishapp:loans'%}">Loans</a></li>
+                        <li><a href="{% url 'moneyfishapp:logout'%}">Logout</a></li>
                     {% else %}
-                        <li><a href="/moneyfishapp/register">Register</a></li>
-                        <li><a href="/moneyfishapp/login">Login</a></li>
+                        <li><a href="{% url 'moneyfishapp:register'%}">Register</a></li>
+                        <li><a href="{% url 'moneyfishapp:login'%}">Login</a></li>
                     {% endif %}
                     </ul>
                 </div>
