correcting static image names.

--- a/templates/moneyfishapp/loans.html
+++ b/templates/moneyfishapp/loans.html
@@ -7,7 +7,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoLoans.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoLoans.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 <script>
