--- a/templates/moneyfishapp/add_debt.html
+++ b/templates/moneyfishapp/add_debt.html
@@ -7,7 +7,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoAddDebt.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoAddDebt.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 
