--- a/templates/moneyfishapp/add_income.html
+++ b/templates/moneyfishapp/add_income.html
@@ -7,7 +7,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoAddIncome.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoAddIncome.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 
