--- a/templates/moneyfishapp/debts.html
+++ b/templates/moneyfishapp/debts.html
@@ -8,7 +8,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoDebts.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoDebts.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 
