--- a/templates/moneyfishapp/login.html
+++ b/templates/moneyfishapp/login.html
@@ -7,7 +7,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoLogin.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoLogin.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 
