--- a/templates/moneyfishapp/myMoney.html
+++ b/templates/moneyfishapp/myMoney.html
@@ -7,7 +7,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoMoney.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoMoney.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 
