--- a/templates/moneyfishapp/register.html
+++ b/templates/moneyfishapp/register.html
@@ -7,7 +7,7 @@
 
 {% block header_block %}
 <div>
-    <img src="{% static 'images/MFLogoReg.png' %} " alt="MoneyFish logo" class="img-place" />
+    <img src="{% static 'images/MFlogoReg.png' %} " alt="MoneyFish logo" class="img-place" />
 </div>
 
 
