--- a/templates/moneyfishapp/loans.html
+++ b/templates/moneyfishapp/loans.html
@@ -35,7 +35,7 @@
     <div>
     {% if loans %}
         <ul>
-        {<script> var num = 0</script>
+        <script> var num = 0</script>
         {% for loan in loans %}
         {% if loan.user.username == user.username %}
         <script> num = num +1</script>
